--- a/pages/mayhem.html
+++ b/pages/mayhem.html
@@ -10,80 +10,72 @@
 <div id="album-list"></div>
 
 <script>
-    (function() {
-        // ========== ПОЛНЫЙ МАССИВ ТРЕКОВ ==========
-        const MAYHEM_TRACKS = [
-            {title: "Disease", url: "https://s3.k-connect.ru/static/music/1475/5954/1770656682_Lady_Gaga_-_Disease.mp3", time: "3:50"},
-            {title: "Abracadabra", url: "https://s3.k-connect.ru/static/music/1475/5955/1770656744_Lady_Gaga_-_Abracadabra.mp3", time: "3:43"},
-            {title: "Garden Of Eden", url: "https://s3.k-connect.ru/static/music/1475/5956/1770656858_Lady_Gaga_-_Garden_Of_Eden.mp3", time: "3:59"},
-            {title: "Perfect Celebrity", url: "https://s3.k-connect.ru/static/music/1475/5957/1770656859_Lady_Gaga_-_Perfect_Celebrity.mp3", time: "3:49"},
-            {title: "Can't Stop the High", url: "https://s3.k-connect.ru/static/music/1475/5958/1770656859_Lady_Gaga_-_Can_t_Stop_the_High.mp3", time: "3:59"},
-            {title: "Vanish Into You", url: "https://s3.k-connect.ru/static/music/1475/5959/1770656860_Lady_Gaga_-_Vanish_Into_You.mp3", time: "4:04"},
-            {title: "Killah", url: "https://s3.k-connect.ru/static/music/1475/5960/1770656860_Lady_Gaga_-_Killah.mp3", time: "3:30"},
-            {title: "Zombieboy", url: "https://s3.k-connect.ru/static/music/1475/5961/1770656861_Lady_Gaga_-_Zombieboy.mp3", time: "3:33"},
-            {title: "The Dead Dance", url: "https://s3.k-connect.ru/static/music/1475/5962/1770656861_Lady_Gaga_-_The_Dead_Dance.mp3", time: "3:49"},
-            {title: "LoveDrug", url: "https://s3.k-connect.ru/static/music/1475/5963/1770656862_Lady_Gaga_-_LoveDrug.mp3", time: "3:13"},
-            {title: "How Bad Do U Want Me", url: "https://s3.k-connect.ru/static/music/1475/5964/1770656932_Lady_Gaga_-_How_Bad_Do_U_Want_Me.mp3", time: "3:58"},
-            {title: "Don't Call Tonight", url: "https://s3.k-connect.ru/static/music/1475/5965/1770656932_Lady_Gaga_-_Don_t_Call_Tonight.mp3", time: "3:45"},
-            {title: "Kill For Love", url: "https://s3.k-connect.ru/static/music/1475/5966/1770656933_Lady_Gaga_-_Kill_For_Love.mp3", time: "4:09"},
-            {title: "Shadow Of A Man", url: "https://s3.k-connect.ru/static/music/1475/5967/1770656933_Lady_Gaga_-_Shadow_Of_A_Man.mp3", time: "3:19"},
-            {title: "The Beast", url: "https://s3.k-connect.ru/static/music/1475/5968/1770656934_Lady_Gaga_-_The_Beast.mp3", time: "3:54"},
-            {title: "Blade Of Grass", url: "https://s3.k-connect.ru/static/music/1475/5969/1770656934_Lady_Gaga_-_Blade_Of_Grass.mp3", time: "4:17"},
-            {title: "Die With A Smile", url: "https://s3.k-connect.ru/static/music/1475/5970/1770656935_Lady_Gaga_-_Die_With_A_Smile.mp3", time: "4:11"}
-        ];
+    // ========== ПОЛНЫЙ МАССИВ ТРЕКОВ ==========
+    const MAYHEM_TRACKS = [
+        {title: "Disease", url: "https://s3.k-connect.ru/static/music/1475/5954/1770656682_Lady_Gaga_-_Disease.mp3", time: "3:50"},
+        {title: "Abracadabra", url: "https://s3.k-connect.ru/static/music/1475/5955/1770656744_Lady_Gaga_-_Abracadabra.mp3", time: "3:43"},
+        {title: "Garden Of Eden", url: "https://s3.k-connect.ru/static/music/1475/5956/1770656858_Lady_Gaga_-_Garden_Of_Eden.mp3", time: "3:59"},
+        {title: "Perfect Celebrity", url: "https://s3.k-connect.ru/static/music/1475/5957/1770656859_Lady_Gaga_-_Perfect_Celebrity.mp3", time: "3:49"},
+        {title: "Can't Stop the High", url: "https://s3.k-connect.ru/static/music/1475/5958/1770656859_Lady_Gaga_-_Can_t_Stop_the_High.mp3", time: "3:59"},
+        {title: "Vanish Into You", url: "https://s3.k-connect.ru/static/music/1475/5959/1770656860_Lady_Gaga_-_Vanish_Into_You.mp3", time: "4:04"},
+        {title: "Killah", url: "https://s3.k-connect.ru/static/music/1475/5960/1770656860_Lady_Gaga_-_Killah.mp3", time: "3:30"},
+        {title: "Zombieboy", url: "https://s3.k-connect.ru/static/music/1475/5961/1770656861_Lady_Gaga_-_Zombieboy.mp3", time: "3:33"},
+        {title: "The Dead Dance", url: "https://s3.k-connect.ru/static/music/1475/5962/1770656861_Lady_Gaga_-_The_Dead_Dance.mp3", time: "3:49"},
+        {title: "LoveDrug", url: "https://s3.k-connect.ru/static/music/1475/5963/1770656862_Lady_Gaga_-_LoveDrug.mp3", time: "3:13"},
+        {title: "How Bad Do U Want Me", url: "https://s3.k-connect.ru/static/music/1475/5964/1770656932_Lady_Gaga_-_How_Bad_Do_U_Want_Me.mp3", time: "3:58"},
+        {title: "Don't Call Tonight", url: "https://s3.k-connect.ru/static/music/1475/5965/1770656932_Lady_Gaga_-_Don_t_Call_Tonight.mp3", time: "3:45"},
+        {title: "Kill For Love", url: "https://s3.k-connect.ru/static/music/1475/5966/1770656933_Lady_Gaga_-_Kill_For_Love.mp3", time: "4:09"},
+        {title: "Shadow Of A Man", url: "https://s3.k-connect.ru/static/music/1475/5967/1770656933_Lady_Gaga_-_Shadow_Of_A_Man.mp3", time: "3:19"},
+        {title: "The Beast", url: "https://s3.k-connect.ru/static/music/1475/5968/1770656934_Lady_Gaga_-_The_Beast.mp3", time: "3:54"},
+        {title: "Blade Of Grass", url: "https://s3.k-connect.ru/static/music/1475/5969/1770656934_Lady_Gaga_-_Blade_Of_Grass.mp3", time: "4:17"},
+        {title: "Die With A Smile", url: "https://s3.k-connect.ru/static/music/1475/5970/1770656935_Lady_Gaga_-_Die_With_A_Smile.mp3", time: "4:11"}
+    ];
 
-        // ========== ЖЁСТКО ПРИСВАИВАЕМ ГЛОБАЛЬНУЮ ПЕРЕМЕННУЮ ==========
-        window.albumTracks = MAYHEM_TRACKS;
+    // ========== ЖЁСТКО ПРИСВАИВАЕМ ==========
+    window.albumTracks = MAYHEM_TRACKS;
 
-        // ========== ФУНКЦИЯ ОТРИСОВКИ ==========
-        function renderMayhem() {
-            // Обновляем информацию о количестве треков
-            const infoEl = document.getElementById('album-info');
-            if (infoEl) infoEl.innerHTML = `Lady Gaga • 2025 • ${window.albumTracks.length} песен`;
+    function renderMayhem() {
+        const infoEl = document.getElementById('album-info');
+        if (infoEl) infoEl.innerHTML = `Lady Gaga • 2025 • ${window.albumTracks.length} песен`;
 
-            // Определяем текущий трек
-            let currentUrl = '';
-            if (window.DeynikPlayer?.audio) currentUrl = window.DeynikPlayer.audio.src;
-            else if (window.audio) currentUrl = window.audio.src;
+        let currentUrl = '';
+        if (window.DeynikPlayer?.audio) currentUrl = window.DeynikPlayer.audio.src;
+        else if (window.audio) currentUrl = window.audio.src;
 
-            // Рендерим список
-            const listEl = document.getElementById('album-list');
-            if (!listEl) return;
+        const listEl = document.getElementById('album-list');
+        if (!listEl) return;
 
-            listEl.innerHTML = window.albumTracks.map((t, i) => {
-                const isPlaying = currentUrl === t.url;
-                return `
-                    <div class="track-row" 
-                         onclick="window.playTrack(${i}, window.albumTracks)"
-                         style="
-                            display: grid;
-                            grid-template-columns: 35px 1fr 60px;
-                            padding: 12px;
-                            border-radius: 8px;
-                            cursor: pointer;
-                            align-items: center;
-                            background: ${isPlaying ? '#1a1a1a' : 'transparent'};
-                            border-left: 4px solid ${isPlaying ? '#1ed760' : 'transparent'};
-                            transition: all 0.2s ease;
-                         "
-                         onmouseover="this.style.background='#1a1a1a'"
-                         onmouseout="this.style.background='${isPlaying ? '#1a1a1a' : 'transparent'}'">
-                        <span style="color: ${isPlaying ? '#1ed760' : '#7a7a7a'}; font-weight: ${isPlaying ? 'bold' : 'normal'};">${i+1}</span>
-                        <b style="color: white;">${t.title}</b>
-                        <span style="text-align: right; color: ${isPlaying ? '#1ed760' : '#7a7a7a'};">${t.time}</span>
-                    </div>
-                `;
-            }).join('');
-        }
+        listEl.innerHTML = window.albumTracks.map((t, i) => {
+            const isPlaying = currentUrl === t.url;
+            return `
+                <div class="track-row" 
+                     onclick="window.playTrack(${i}, window.albumTracks)"
+                     style="
+                        display: grid;
+                        grid-template-columns: 35px 1fr 60px;
+                        padding: 12px;
+                        border-radius: 8px;
+                        cursor: pointer;
+                        align-items: center;
+                        background: ${isPlaying ? '#1a1a1a' : 'transparent'};
+                        border-left: 4px solid ${isPlaying ? '#1ed760' : 'transparent'};
+                        transition: all 0.2s ease;
+                     "
+                     onmouseover="this.style.background='#1a1a1a'"
+                     onmouseout="this.style.background='${isPlaying ? '#1a1a1a' : 'transparent'}'">
+                    <span style="color: ${isPlaying ? '#1ed760' : '#7a7a7a'}; font-weight: ${isPlaying ? 'bold' : 'normal'};">${i+1}</span>
+                    <b style="color: white;">${t.title}</b>
+                    <span style="text-align: right; color: ${isPlaying ? '#1ed760' : '#7a7a7a'};">${t.time}</span>
+                </div>
+            `;
+        }).join('');
+    }
 
-        // ========== ЗАПУСК ==========
-        renderMayhem();
-        setInterval(renderMayhem, 1000);
-        window.addEventListener('load', renderMayhem);
-        
-        // Отладка в консоль
-        console.log('✅ mayhem.html: Принудительно установлено', window.albumTracks.length, 'треков');
-    })();
+    renderMayhem();
+    setInterval(renderMayhem, 1000);
+    window.addEventListener('load', renderMayhem);
+    
+    console.log('✅ mayhem.html: Установлено', window.albumTracks.length, 'треков');
 </script>
 
 <style>
